--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: dmamontov/esphome-lint@main
         with:
+          esphome-version: "latest"
           use-esphome-compile: true
           esphome-compile-file: ${{ matrix.devices }}.yaml
           use-clang-format: true
