--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -73,6 +73,13 @@ logger:
 
 # Enable Home Assistant API
 api:
+  services:
+    - service: goto_screen
+      variables:
+        screen_name: string
+      then:
+      - lambda: |-
+          goToScreenFromString(screen_name);
 
 ota:
 
@@ -309,7 +316,8 @@ custom_component:
       FriendlyNameEntity("sensor.accuweather_realfeel_temperature", "Temperature"),
       FriendlyNameEntity("sensor.vancouver_forecast", ""),
       FriendlyNameEntity("sensor.washing_machine_state", "Washing Machine"),
-      FriendlyNameEntity("sensor.soil_sensor_soil_moisture_2", "Plant Moisture")
+      FriendlyNameEntity("sensor.soil_sensor_soil_moisture_2", "Plant Moisture"),
+      FriendlyNameEntity("sensor.particulate_matter_2_5um_concentration", "Kitchen Air")
     };
     sensorGroup->setup(sensors);
     App.register_component(sensorGroup);
