--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        devices: [ 'lilygo', 'fireremote', 'tdisplay2' ]
+        devices: [ 'lilygo', 'fireremote', 'tdisplay2', 'tdisplayt4' ]
     steps:
       - uses: actions/checkout@v2
       - uses: esphome/build-action@v1.1.0
