--- a/tdisplayt4.yaml
+++ b/tdisplayt4.yaml
@@ -19,16 +19,6 @@ esp32:
 # Enable logging
 logger:
 
-# Enable Home Assistant API
-api:
-  services:
-    - service: goto_screen
-      variables:
-        screen_name: string
-      then:
-      - lambda: |-
-          goToScreenFromString(screen_name);
-
 ota:
   password: !secret ota_encryption
 
@@ -44,158 +34,22 @@ wifi:
 
 captive_portal:
 
-deep_sleep:
-  id: deep_sleep_1
 
-color:
-  - id: my_red
-    red: 100%
-    green: 0%
-    blue: 0%
-  - id: my_yellow
-    red: 100%
-    green: 100%
-    blue: 0%
-  - id: my_green
-    red: 0%
-    green: 100%
-    blue: 0%
-  - id: my_blue
-    red: 0%
-    green: 45%
-    blue: 68%
-  - id: my_gray_dark
-    red: 40%
-    green: 40%
-    blue: 40%
-  - id: my_gray_dark_2
-    red: 3%
-    green: 3%
-    blue: 3%
-  - id: my_gray
-    red: 10%
-    green: 10%
-    blue: 10%
-  - id: my_black
-    red: 0%
-    green: 0%
-    blue: 0%
-  - id: my_white
-    red: 100%
-    green: 100%
-    blue: 100%
+substitutions:
+  boot_name: '"Kitchen Remote <3"'
+  large_font_size: "24"
+  medium_font_size: "18"
+  small_font_size: "16"
+  header_height: "24"
+  margin_size: "18"
+  scroll_bar_width: "8"
+  bottom_bar_margin: "42"
+  now_playing_max_lines: "10"
+  draw_now_playing_menu: "true"
+  draw_battery_level: "false"
+  draw_shuffle_disabled: "false"
 
-font:
-  - file: "fonts/iosevka.ttf"
-    id: large_font
-    size: 24
-    glyphs: '*/\$#<>!"%()+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êé'''
-  - file: "fonts/iosevka.ttf"
-    id: medium_font
-    size: 18
-    glyphs: '*/\$#<>!"%()+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êé'''
-  - file: "fonts/iosevka.ttf"
-    id: small_font
-    size: 16
-    glyphs: '*/\$#<>!"%()+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êé'''
-
-image:
-  - file: "images/playWhite.png"
-    id: image_play_white
-    type: RGB24
-  - file: "images/play.png"
-    id: image_play
-    type: RGB24
-  - file: "images/pause.png"
-    id: image_pause
-    type: RGB24
-  - file: "images/pauseWhite.png"
-    id: image_pause_white
-    type: RGB24
-  - file: "images/stop.png"
-    id: image_stop
-    type: RGB24
-  - file: "images/stopWhite.png"
-    id: image_stop_white
-    type: RGB24
-  - file: "images/sleepWhite.png"
-    id: image_sleep_white
-    type: RGB24
-  - file: "images/sleep.png"
-    id: image_sleep
-    type: RGB24
-  - file: "images/shuffle.png"
-    id: image_shuffle
-    type: RGB24
-  - file: "images/shuffleDisabled.png"
-    id: image_shuffle_disabled
-    type: RGB24
-  - file: "images/volumeLow.png"
-    id: image_volume_low
-    type: RGB24
-  - file: "images/volumeHigh.png"
-    id: image_volume_high
-    type: RGB24
-    
-globals:
-  - id: large_font_size
-    type: int
-    restore_value: no
-    initial_value: "24"
-  - id: medium_font_size
-    type: int
-    restore_value: no
-    initial_value: "18"
-  - id: small_font_size
-    type: int
-    restore_value: no
-    initial_value: "16"
-  - id: font_size_width_ratio
-    type: double
-    restore_value: no
-    initial_value: "0.6"
-  - id: header_height
-    type: int
-    restore_value: no
-    initial_value: "24"
-  - id: margin_size
-    type: int
-    restore_value: no
-    initial_value: "8"
-  - id: scroll_bar_width
-    type: int
-    restore_value: no
-    initial_value: "6"
-  - id: bottom_bar_margin
-    type: int
-    restore_value: no
-    initial_value: "42"
-  - id: icon_size
-    type: int
-    restore_value: no
-    initial_value: "12"
-  - id: now_playing_max_lines
-    type: int
-    restore_value: no
-    initial_value: "10"
-  - id: draw_now_playing_menu
-    type: bool
-    restore_value: no
-    initial_value: "true"
-  - id: draw_battery_level
-    type: bool
-    restore_value: no
-    initial_value: "false"
-  - id: boot_device_name
-    type: std::string
-    restore_value: no
-    initial_value: '"T4 Remote <3"'
-    
-## Draw shuffle icon if shuffle is disabled
-  - id: draw_shuffle_disabled
-    type: bool
-    restore_value: no
-    initial_value: "false"
+<<: !include esphomeRemote/esphome-remote-base.yaml
 
 custom_component:
 - lambda: |-
@@ -240,7 +94,8 @@ custom_component:
       FriendlyNameEntity("sensor.accuweather_realfeel_temperature", "Temperature"),
       FriendlyNameEntity("sensor.vancouver_forecast", ""),
       FriendlyNameEntity("sensor.washing_machine_state", "Washing Machine"),
-      FriendlyNameEntity("sensor.soil_sensor_soil_moisture_2", "Plant Moisture")
+      FriendlyNameEntity("sensor.soil_sensor_soil_moisture_2", "Plant Moisture"),
+      FriendlyNameEntity("sensor.particulate_matter_2_5um_concentration", "Kitchen Air")
     };
     sensorGroup->setup(sensors);
     App.register_component(sensorGroup);
@@ -263,16 +118,7 @@ sensor:
     id: batteryPercent
     unit_of_measurement: '%'
 
-interval:
-  - interval: 1s
-    then:
-    - lambda: |-
-        idleTick();
-
 binary_sensor:
-  - platform: status
-    name: "Node Status"
-    id: system_status
   - platform: gpio
     id: T4_BtnA
     pin:
@@ -323,7 +169,7 @@ switch:
     restore_mode: RESTORE_DEFAULT_ON
   - platform: template
     name: Sleep Toggle
-    id: tt_sleep
+    id: sleep_toggle
     optimistic: true
     internal: true
     on_turn_on:
