--- a/tdisplayt4.yaml
+++ b/tdisplayt4.yaml
@@ -18,6 +18,7 @@ esp32:
 
 # Enable logging
 logger:
+  level: INFO
 
 ota:
   password: !secret ota_encryption
@@ -38,10 +39,10 @@ captive_portal:
 substitutions:
   boot_name: '"Kitchen Remote <3"'
   large_font_size: "24"
-  medium_font_size: "18"
-  small_font_size: "16"
+  medium_font_size: "20"
+  small_font_size: "18"
   header_height: "24"
-  margin_size: "18"
+  margin_size: "8"
   scroll_bar_width: "8"
   bottom_bar_margin: "42"
   now_playing_max_lines: "10"
