add time to status bar make volume level optional move play/pause icon to left side fix rotary option menu not going to menus

--- a/esphomeRemote/esphome-remote-base.yaml
+++ b/esphomeRemote/esphome-remote-base.yaml
@@ -164,6 +164,12 @@ globals:
     restore_value: no
     initial_value: ${draw_battery_level}
     
+## Draw volume level in header
+  - id: draw_volume_level
+    type: bool
+    restore_value: no
+    initial_value: ${draw_volume_level}
+    
 ## Draw shuffle icon if shuffle is disabled
   - id: draw_shuffle_disabled
     type: bool
