--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -26,6 +26,7 @@ substitutions:
   now_playing_max_lines: "5"
   draw_now_playing_menu: "true"
   draw_battery_level: "true"
+  draw_volume_level: "false"
   draw_shuffle_disabled: "false"
 
 <<: !include esphomeRemote/esphome-remote-base.yaml
@@ -149,9 +150,8 @@ custom_component:
 ## Home assistant sensors. Set with a friendly name
 - lambda: |-
     std::vector<FriendlyNameEntity> sensors { 
-      FriendlyNameEntity("sensor.current_time", ""),
-      FriendlyNameEntity("sensor.accuweather_realfeel_temperature", "Temperature"),
       FriendlyNameEntity("sensor.vancouver_forecast", ""),
+      FriendlyNameEntity("sensor.accuweather_realfeel_temperature", "Temperature"),
       FriendlyNameEntity("sensor.washing_machine_state", "Washing Machine"),
       FriendlyNameEntity("sensor.soil_sensor_soil_moisture_2", "Plant Moisture"),
       FriendlyNameEntity("sensor.particulate_matter_2_5um_concentration", "Kitchen Air")
