--- a/tdisplayremote.yaml
+++ b/tdisplayremote.yaml
@@ -43,6 +43,7 @@ substitutions:
   now_playing_max_lines: "5"
   draw_now_playing_menu: "false"
   draw_battery_level: "true"
+  draw_volume_level: "false"
   draw_shuffle_disabled: "false"
 
 <<: !include esphomeRemote/esphome-remote-base.yaml
@@ -93,9 +94,8 @@ custom_component:
 ## Home assistant sensors. Set with a friendly name
 - lambda: |-
     std::vector<FriendlyNameEntity> sensors { 
-      FriendlyNameEntity("sensor.current_time", ""),
-      FriendlyNameEntity("sensor.accuweather_realfeel_temperature", "Temperature"),
       FriendlyNameEntity("sensor.vancouver_forecast", ""),
+      FriendlyNameEntity("sensor.accuweather_realfeel_temperature", "Temperature"),
       FriendlyNameEntity("sensor.washing_machine_state", "Washing Machine"),
       FriendlyNameEntity("sensor.soil_sensor_soil_moisture_2", "Plant Moisture")
     };
