--- a/tdisplayt4.yaml
+++ b/tdisplayt4.yaml
@@ -48,6 +48,7 @@ substitutions:
   now_playing_max_lines: "10"
   draw_now_playing_menu: "true"
   draw_battery_level: "false"
+  draw_volume_level: "false"
   draw_shuffle_disabled: "false"
 
 <<: !include esphomeRemote/esphome-remote-base.yaml
@@ -91,9 +92,8 @@ custom_component:
   id: light_group_component
 - lambda: |-
     std::vector<FriendlyNameEntity> sensors { 
-      FriendlyNameEntity("sensor.current_time", ""),
-      FriendlyNameEntity("sensor.accuweather_realfeel_temperature", "Temperature"),
       FriendlyNameEntity("sensor.vancouver_forecast", ""),
+      FriendlyNameEntity("sensor.accuweather_realfeel_temperature", "Temperature"),
       FriendlyNameEntity("sensor.washing_machine_state", "Washing Machine"),
       FriendlyNameEntity("sensor.soil_sensor_soil_moisture_2", "Plant Moisture"),
       FriendlyNameEntity("sensor.particulate_matter_2_5um_concentration", "Kitchen Air")
